--- a/lib_licences/licenseReport.html
+++ b/lib_licences/licenseReport.html
@@ -258,7 +258,7 @@
       </li>
       <li><a href="#1934118923">NoException (1.7.1)</a>
         <dl>
-          <dt>Copyright &copy; 2017 Robert VaÅ¾an</dt>
+          <dt>Copyright &copy; 2017 Robert Važan</dt>
         </dl>
       </li>
       <li><a href="#1934118923">Plexus Common Utilities (3.3.0)</a>
@@ -589,13 +589,13 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       <li><a href="#1839717933">Java Native Access (5.10.0)</a>
         <dl>
           <dt>Copyright &copy; 20xx Timothy Wall</dt>
-          <dt>Copyright &copy; 20xx Matthias BlÃ¤sing</dt>
+          <dt>Copyright &copy; 20xx Matthias Bläsing</dt>
         </dl>
       </li>
       <li><a href="#1839717933">Java Native Access Platform (5.10.0)</a>
         <dl>
           <dt>Copyright &copy; 20xx Timothy Wall</dt>
-          <dt>Copyright &copy; 20xx Matthias BlÃ¤sing</dt>
+          <dt>Copyright &copy; 20xx Matthias Bläsing</dt>
         </dl>
       </li>
 <a name="1839717933"></a>
